--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "test-library",
+  "name": "@JohnB08/test-library",
   "version": "1.0.0",
   "description": "test-library",
-  "main": "index.js",
+  "main": "dist/index.umd.js",
+  "module": "dist/index.mjs",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 0",
     "build": "vite build"
   },
   "author": "",
@@ -15,5 +19,8 @@
   },
   "peerDependencies": {
     "react": "^18.2.0"
+  },
+  "publishConfig": {
+    "@JohnB08:registry": "https://npm.pkg.github.com"
   }
 }
