--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@johnb08/test-library",
   "version": "1.0.1",
   "private": false,
+  "repository": "https://github.com/JohnB08/test-library",
   "description": "test-library",
   "main": "dist/index.umd.js",
   "module": "dist/index.mjs",
@@ -23,5 +24,6 @@
   },
   "publishConfig": {
     "@johnb08:registry": "https://npm.pkg.github.com"
-  }
+  },
+  "type": "module"
 }
