--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@johnb08/test-library",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "private": false,
   "repository": {
     "type": "git",
@@ -8,7 +8,7 @@
   },
   "description": "test-library",
   "main": "dist/index.umd.js",
-  "module": "dist/index.mjs",
+  "module": "dist/index.js",
   "files": [
     "dist"
   ],
