--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@johnb08/test-library",
-  "version": "1.0.3",
+  "version": "1.0.9",
   "private": false,
   "repository": {
     "type": "git",
@@ -19,7 +19,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "vite": "^5.0.11"
   },
   "peerDependencies": {
