--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.12",
+    "@storybook/addon-a11y": "^7.6.12",
     "@storybook/addon-interactions": "^7.6.12",
     "@storybook/addon-links": "^7.6.12",
     "@storybook/addon-mdx-gfm": "^7.6.12",
