--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -27,4 +27,4 @@ jobs:
         run: npm run build
 
       - name: publish build
-        run: npm publish
+        run: npm set "//registry.npmjs.org/:_authToken" ${{ secrets.NPM_TOKEN }} && npm publish -access public
